--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url= jdbc:mysql://localhost:3306/portfolio03?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.darasource.password=
+spring.datasource.url= jdbc:mysql://bxbefbat9rnmtmorz1h4-mysql.services.clever-cloud.com:3306/bxbefbat9rnmtmorz1h4?useSSL=false&serverTimezone=UTC
+spring.datasource.username=u9vbemdtbhdjzkmp
+spring.datasource.password=n8ETHuRtP7TDSAWBINdE
 spring.jpa.database-plataform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=2
